fix logo on Firefox

--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -1,4 +1,7 @@
 @import "variables.scss";
+@-moz-document url-prefix() {
+  .brand { -webkit-transform: scale(0.5); top: -26px !important; }
+}
 
 .nav {
     z-index: 1;
